--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
   <script>
      function texto() {
         var url = new URLSearchParams(window.location.search);
-        var x = url.get('var');
+        var x3232 = url.get('var');
 
-        if(x == 'true'){
+        if(x3232 == "true"){
             alert('la compra se realizo con exito');
         }
     }
