--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
+  <script>
+    document.addEventListener("DOMContentLoaded", texto);
+  </script>
   <head><script src="../assets/js/color-modes.js"></script>
 
     <meta charset="utf-8">
