--- a/confirmacion.html
+++ b/confirmacion.html
@@ -201,12 +201,7 @@
 <main>
   <div class="container p-4">
     <center>
-      <script async src="https://js.stripe.com/v3/buy-button.js">
-      </script>
-      
-      <stripe-buy-button buy-button-id="buy_btn_1PdZriJ0i31j0CCDCwMboFPp"
-        publishable-key="pk_test_51PdBsgJ0i31j0CCDkxitXSaP2gKrUKjDEYSKpYGQMyWGPugc2p1ye1eyfQF0tLbEM8k4EORwthaXNqX29lmLwHHi00MEVd2VTY">
-      </stripe-buy-button>
+      <h1>¡La compra ha sido realizada con exito!</h1>
     </center>
   </div>
 <footer class="container py-5">
